--- a/Projects/First Project/README
+++ b/Projects/First Project/README
@@ -1,1 +1,7 @@
+The Business: Adventure Works, bikes and bike accessory sales & product returns
+
+Business problem: explore data to find trends
+Desired Results: sales insights, customer behaviour, product trends
+
+Dataset information: how many files, rowsXcolumns for each - general description:
 
